99-flussoapplicativo/istio-policies/02-mgw/05-allow-from-fe.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-fe
  namespace: mgw
spec:
  selector:
    matchLabels: {} # You can specify labels here if you want to target specific services
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: [ "fe" ] # Allow traffic from the same namespace
